--- a/config/agricraft/Configuration.cfg
+++ b/config/agricraft/Configuration.cfg
@@ -113,7 +113,7 @@ farming {
     B:"Disable Vanilla Farming"=false
 
     # set to false if you wish to disable weeds [default: true]
-    B:"Enable weeds"=true
+    B:"Enable weeds"=fase
 
     # This is a global growth rate multiplier [range: 0.0 ~ 2.0, default: 1.0]
     S:"Growth rate multiplier"=1.0
@@ -149,7 +149,7 @@ farming {
     S:"Weed Spawn Chance"=0.15
 
     # set to false if you don't want weeds to be able to overgrow other plants [default: true]
-    B:"Weeds can overtake plants"=true
+    B:"Weeds can overtake plants"=fase
 
     # set this to true to have weeds destroy the crop sticks when they are broken with weeds (to encourage rake usage) [default: false]
     B:"Weeds destroy crop sticks"=false
